feat(lock): record and enforce transitive dependency graph in lock
Assisted-by: Haley (openai-codex/gpt-5.3-codex)